<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/noteCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_card"
        app:cardCornerRadius="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:fadingEdge="vertical"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/note_title_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/noteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_content_placeholder"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textIsSelectable="true"
            android:textColor="?attr/colorOnTertiary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

            <TextView
            android:id="@+id/noteTimestamp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/note_timestamp_placeholder"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnTertiary"
            android:padding="10dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>