<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/title_text"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/transcription"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_00_00"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- insert the circle.xml drawable here -->
    <ImageView
        android:id="@+id/circle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/circle"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="@+id/recordButton"
        app:layout_constraintStart_toStartOf="@+id/recordButton"
        app:layout_constraintTop_toTopOf="@+id/recordButton"
        android:translationZ="2dp"
        />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text=""
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:translationZ="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/transcription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transcription"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_card"
        android:padding="20dp"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/leftButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/recordButton"
        app:layout_constraintStart_toStartOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton"
        android:translationZ="20dp"
        />

    <TextView
        android:id="@+id/rightButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:translationZ="20dp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@+id/recordButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

    <ImageView
        android:id="@+id/recordButton"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:src="@drawable/record_button_idle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:translationZ="20dp" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/button_right"
        android:textAlignment="textEnd"
        android:layout_marginEnd="-135dp"
        app:layout_constraintBottom_toBottomOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="@id/recordButton"
        app:layout_constraintTop_toTopOf="@+id/recordButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/button_left"
        android:textAlignment="textStart"
        android:layout_marginStart="-135dp"
        app:layout_constraintBottom_toBottomOf="@+id/recordButton"
        app:layout_constraintStart_toStartOf="@+id/recordButton"
        app:layout_constraintTop_toTopOf="@+id/recordButton" />

    <Button
        android:id="@+id/history"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/history"
        android:textColor="?attr/colorOnTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/recordButton" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@+id/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_text"
        app:tint="?attr/colorOnTertiary" />


</androidx.constraintlayout.widget.ConstraintLayout>